# agentic-ai

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/: rag_demo_app.py  streamlit_app.py
data/indexes/: sample.json
data/sample_docs/: analytics_kpi_guide.md  malicious_prompt.txt  ops_sop_onboarding.txt
runs/: 043506ef-084f-4b7a-8da6-fa1c63b303fb.jsonl  969be868-c744-4db6-b04b-877ddc803030.jsonl
runs_test/: 6d8fce8d-be2d-4552-be0c-5c1a48ad13c1.jsonl  b56a5582-bf2c-4e5a-9813-3c5e9a3f8ad1.jsonl
src/common/agents/: demo_cli.py  rag_tool_demo_cli.py  runner.py  simple_planner_verifier.py  types.py
src/common/rag/: cli.py  embeddings.py  index.py  injection.py  retriever.py  text.py  tfidf.py  tool.py  types.py
src/common/tools/: registry.py
src/common/utils/: config.py  logging.py
tests/: test_agent_runner.py  test_rag_backends.py  test_rag_index_and_search.py  test_rag_injection.py  test_rag_tool_registry.py  test_smoke.py  test_tool_registry.py
